# DwarfEngine

./: CMakeLists.txt  README.md
cmake/Modules/: FindASSIMP.cmake  FindGLFW.cmake  FindSDL2.cmake
dependencies/: CMakeLists.txt
dependencies/cmake/Modules/: ExternalAssimp.cmake  ExternalGLFW.cmake  ExternalSDL2.cmake
scripts/: rpath.sh
src/cmake/: DwarfConfig.cmake.in
src/include/Dwarf/: DwarfEngine.h  DwarfRoot.h  DwarfSetup.h  DwarfSetup.h.in
src/include/Dwarf/Graphics/: Camera2D.h  Framebuffer.h  GL.h  GLFWWindow.h  Image.h  Mesh.h  PostFX.h  Shader.h  ShaderProgram.h  Sprite.h  SpriteBatch.h  Texture.h  Texture1D.h  Texture2D.h  Texture2DBuffer.h  Window.h
src/include/Dwarf/Graphics/FX/: BloomFX.h
src/include/Dwarf/Graphics/Shaders/: Shaders.h
src/include/Dwarf/Input/: GLFWKeyboard.h  IInput.h  Keyboard.h  KeyboardDef.h  KeyboardListener.h  KeyboardProvider.h
src/include/Dwarf/Math/: Def.h  Matrix4x4.h  MatrixNxN.h  Misc.h  Random.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.h  VectorN.h
src/include/Dwarf/Util/: Exceptions.h  FileSystem.h  IDisposable.h  IResource.h  Logger.h  Misc.h  ResourceManager.h  Singleton.h  Time.h
src/lib/Dwarf/: DwarfRoot.cpp
src/lib/Dwarf/Graphics/: Camera2D.cpp  Framebuffer.cpp  GLFWWindow.cpp  Image.cpp  Mesh.cpp  PostFX.cpp  Shader.cpp  ShaderProgram.cpp  Sprite.cpp  SpriteBatch.cpp  Texture.cpp  Texture1D.cpp  Texture2D.cpp  Texture2DBuffer.cpp  Window.cpp
src/lib/Dwarf/Graphics/FX/: BloomFX.cpp
src/lib/Dwarf/Graphics/Shaders/: BloomCombineFX.frag  BloomFX.frag  FullQuad.frag  FullQuad.vert  GaussBlurFX.frag  PositionColor.frag  PositionColor.vert  PositionTexture.frag  PositionTexture.vert  Shaders.cpp  SpriteBatch.frag  SpriteBatch.vert
src/lib/Dwarf/Input/: GLFWKeyboard.cpp  IInput.cpp  Keyboard.cpp  KeyboardProvider.cpp
src/lib/Dwarf/Math/: Misc.cpp  Random.cpp  Rectangle.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/lib/Dwarf/Utils/: Exceptions.cpp  FileSystem.cpp  IDisposable.cpp  IResource.cpp  Logger.cpp  ResourceManager.cpp  Singleton.cpp  Time.cpp
